# showrunner-sdk

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: minimal_app.py
showrunner_sdk/: __init__.py  config.py  health.py  metrics.py
templates/: Dockerfile  main.py  requirements.txt
templates/.github/workflows/: release.yml
templates/.showrunner/: appspec.json  release.json
